2003-02-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* bitmaps/clsbr_private.xpm: Add small empty
	image to represent a private class member.
	* gui/utilities.tcl: Define cls_br_private_image
	with date from clsbr_private.xpm.
	* hyper/services.c (class_browser_insert): Use
	cls_br_private_image as the image when a member
	with PAF_PRIVATE access is found. Check for
	PAF_PRIVATE explicitly instead of just assuming
	that a non-public and non-protected member is
	private.

2003-01-11  Ian Roxborough  <irox@sbcglobal.net>

	* gui/projedit.tcl (print_file): Where possible
	use the directory of the first source file in
	a project as the default directory for the
	"Add Files" file selection dialog.

2003-01-11 Mo DeJong  <mdejong@uncounted.org>

	* etc/sn_cmp_g.pat: Add pattern to match a
	Win32 filename like d:/filename.c:856.
	* gui/grep.tcl (sn_goto_comp_error_or_grep):
	Remove hack to match a win32 path name
	like d:/filename.c:856, use regexp instead.
	* tests/gui/grep.test: Add path name test
	cases for sn_goto_comp_error_or_grep.

2002-11-27  Mo DeJong  <mdejong@uncounted.org>

	Added SN-512-2002-11-27 tag.

2002-11-26  Mo DeJong  <mdejong@uncounted.org>

	* patches/libgui_print.patch: Add patch
	for libgui that fixes Win32 printing crash.

2002-11-26  Mo DeJong  <mdejong@uncounted.org>

	* gui/Makefile.am: Add winprint.tcl.
	* gui/Makefile.in: Regen.
	* gui/editorpane.tcl (print_file): Don't
	attempt to delete a printer dialog object
	if it does not exist. This fixes a problem
	printing the grep pane under Windows.
	* gui/tclIndex: Regen.
	* gui/winprint.tcl: Resurrect windows
	printing file that was erroneously removed
	on 2000-05-26. These methods are used
	by the utilities.tcl file.

2002-11-25  Mo DeJong  <mdejong@uncounted.org>

	* Makefile.am: Ignore doc subdir.
	* Makefile.in: Regen.
	* README.TXT: Mention sourceforge URL
 	for online docs.
	* configure: Regen.
	* configure.in: Don't generate Makefiles
	in doc subdir.